data_url/data_url_10937.txt
Hello,
It's very exciting that DWAVE is sharing qbsolv! I managed to compile it on a Windows machine by using the Cygwin terminal. I used gcc 4.9.2 and got the following error:
gcc -Ofast     -c -o dwsolv.o dwsolv.c
gcc -Ofast     -c -o util.o util.c
gcc -Ofast     -c -o solver.o solver.c
solver.c: In function ‘solve’:
solver.c:400:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘attribute’ before numeric constant
const int QLEN 20;
^
solver.c:405:38: error: ‘QLEN’ undeclared (first use in this function)
Qlist = (short**)malloc2D(maxNodes, QLEN + 1, sizeof(short));
^
solver.c:405:38: note: each undeclared identifier is reported only once for each function it appears in
: recipe for target 'solver.o' failed
make: *** [solver.o] Error 1
This was solved by modifying line 400 of solver.c from:
const int QLEN 20;
to:
const int QLEN=20;
I hope this helps,
JM Sellier
This is now fixed. Thanks!
The original code was
#define QLEN 20
I am curious how it ever evolved to
const int QLEN 20
